# pyGOBLET

./: .gitignore  README.md  pyproject.toml
.github/workflows/: draft-pdf.yml  gh-pages.yml  testing.yml
docs/: Makefile  bench_functions.rst  bench_tools.rst  conf.py  custom_problems.rst  examples.rst  floris_problems.rst  index.rst  optimizer.rst  postprocessing.rst  problems.rst  requirements.txt  runners.rst  standard_problems.rst
examples/: cocopp_postprocessing.py  custom_postprocessing.ipynb  floris_problems.ipynb  pyomo_implementation.py  scipy_optimizers.py
global_opt_bench/: benchmark_functions.py  benchmark_tools.py  benchmarks.py  pyomo_implementation.py  scipy_optimizers.py
paper/: paper.bib  paper.md
pygoblet/problems/data/: README.md
pygold/: __init__.py  benchmark_functions.py  benchmark_tools.py  default_runners.py  optimizer.py  postprocessing.py  runners.py  scipy_optimizers.py
pygold/cocopp_interface/: __init__.py  custom_titles.html  interface.py  testbed.py
pygold/postprocessing/: testbed.py
pygold/problems/: __init__.py  floris.py  floris_problems.py  standard.py  standard_problems.py
pygold/problems/data/: A2E_Hourly_Samples.csv  emgauss.yaml
tests/: test_benchmark_functions.py  test_benchmark_tools.py  test_external_algorithms.py  test_pyomo_interface.py  test_runners.py  test_test.py
tutorials/: 00_quickstart.ipynb  01_configuring_algorithms.ipynb  02_running_experiments.ipynb  03_postprocessing.ipynb  04_custom_problems.ipynb  05_pyomo_integration.ipynb  README.md  ex1_floris_problems.ipynb
