[project]
name = "pygold"
version = "0.1.0"
description = "A Python Global Optimization Library (pyGOLD) for benchmarking global optimization algorithms."
authors = [
    {name = "Byron Selvage", email = "byron.selvage@nrel.gov"},
    {name = "Weslley da Silva Pereira", email = "weslley.dasilvapereira@nrel.gov"},
]
dependencies = ["numpy>=2.0.2", "matplotlib>=3.9.4", "array-api-compat>=1.11.2"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.11.11",
]
doc = [
    "sphinx>=7.4.7",
    "furo>=2024.8.6",
    "sphinx-autodoc-typehints>=2.3.0",
]
optional = [
    "pyomo>=6.9.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint.pycodestyle]
max-doc-length = 80
distribution = true

[tool.pdm.build]
includes = ["pygold"]

[tool.setuptools.packages.find]
include = ["pygold*"]